Presentation Day Upload
Cleaned up a little for preso

--- a/index.html
+++ b/index.html
@@ -42,15 +42,16 @@
       <img src="img\cup.svg" id="cup3">
     </div>
 
-    <div id="pourAnimation">
-    <img src="img\pour.svg" id="pour">
+    <div class="pour">
     </div>
+
   </header>
 
   <section id="ingredients">
     <h2>
       Ingredients
     </h2>
+
     <div id="ingredients-wrapper">
       <form>
         <input id="blackTeaBags" type="checkbox" name="ingredients" value="Black Tea Bags" > 
@@ -73,71 +74,79 @@
         <input id="peppercorns" type="checkbox" name="ingredients" value="peppercorns"> <label for="peppercorns">3-4 Peppercorns</label> <h4>More can be added but no less.</h4>
 
         <input id="ginger" type="checkbox" name="ingredients" value="ginger"> <label for="ginger"> Fresh Ginger</label> <h4>A piece the size of a quarter coin.
-        </h4>
+      </h4>
 
-      </form>
+    </form>
 
-      <div id="ingredients-image">
-        <img src="img\Cup 4.svg" id="cup4">
-        <img src="img\Cup 4.svg" id="cup4">
-    
-      </div>
-
-      <!-- how do a get an animation here of a cup filling up once all of the ingredients are checked that says "your ready to go" -->
-
+    <div id="ingredients-image">
+      <img src="img\Cup 4.svg" id="cup41">
+      <img src="img\Cup 4.svg" id="cup42">
     </div>
-  </section>
+    <div id="circleWrapper">   
+    <div id="circle">
 
-  <section id="directions">
+      <p>You need a few more ingredients...</p>
+    </div>
+    <img src="img\Cup 4.svg" id="cup41">
+    <img src="img\Cup 4.svg" id="cup42">
+    </div>
 
-    <h2>
-      Directions
-    </h2>
+  </div> 
+</section>
+
+<section id="directions">
+
+  <h2>
+    Directions
+  </h2>
 
   <div class="carousel-wrapper">
     <div class="slides">
       <img src="img/step1.svg">
       <img src="img/step2.svg">
-      <img src="img/step1.svg">
-      <img src="img/step1.svg">
+      <img src="img/step3.svg">
+      <img src="img/step4.svg">
     </div>
   </div>
-  <button id="previous">Previous</button>
-  <button id="next">Next</button>
+  <div id="button-wrapper">
+    <button id="previous"><</button>
+  <button id="next">></button>
+</div>
+</section>
 
-  </section>
-
-  <section id="adjustments">
-    <h2>
-     Adjustments
-   </h2>
-   <div id="adjustments-wrapper">
-     <div id="sweetness">
+<section id="adjustments">
+  <h2>
+   Adjustments
+ </h2>
+ <div id="adjustments-wrapper">
+   <div id="sweetness">
      <img src="img\sweetness.svg" id="sugar">
-       <h3>sweet•ness</h3>
-       <p>Feel free to add as much or as little sugar as you want! You can even skip adding the sugar initially to the pot and let each person add sugar to taste per cup...1 lump or 2 or 3...?!?!</p>
-     </div>
-
-     <div id="spicyness">
-     <img src="img\spiciness.svg" id="spice">
-       <h3>spicy•ness</h3>
-       <p>For a little more bite to your chai add more ginger and cardamom. Grating fresh ginger especially adds a kick. Some people add fennel seed or star anise for a gentle licorice note.</p>
-     </div>
-
-     <div id="strength">
-      <img src="img\strength.svg" id="strength">
-       <h3>strength</h3>
-
-       <p>If you like your chai to be stronger skimp on the milk or leave the tea bags in the pot— they will continue to brew and add strength! If you prefer a milder chai, take the teabags out sooner or even use a decaffinated black tea.</p>
-     </div>
-
+     <h3>sweet•ness</h3>
+     <p>Feel free to add as much or as little sugar as you want! You can even skip adding the sugar initially to the pot and let each person add sugar to taste per cup...1 lump or 2 or 3...?!?!</p>
    </div>
 
- </section>
+   <div id="spicyness">
+     <img src="img\spiciness.svg" id="spice">
+     <h3>spicy•ness</h3>
+     <p>For a little more bite to your chai add more ginger and cardamom. Grating fresh ginger especially adds a kick. Some people add fennel seed or star anise for a gentle licorice note.</p>
+   </div>
 
- <section id="teaLeafFortunes">
+   <div id="strength">
+    <img src="img\strength.svg" id="strength">
+    <h3>strength</h3>
+
+    <p>If you like your chai to be stronger skimp on the milk or leave the tea bags in the pot— they will continue to brew and add strength! If you prefer a milder chai, take the teabags out sooner or even use a decaffinated black tea.</p>
+  </div>
+
+</div>
+
+</section>
+
+<section id="teaLeafFortunes">
   <h2>Tea Leaf Fortunes</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin cursus dolor sit amet neque aliquet euismod. Nullam id venenatis risus, non rhoncus nisi. Aenean luctus nec nulla eu cursus. In aliquam odio ut enim ultrices, vel vehicula velit congue. Ut cursus diam dolor, sed imperdiet orci bibendum ut. Vestibulum scelerisque pharetra nisi, nec faucibus tortor rhoncus et. Curabitur at neque nisi. Cras tempor blandit ipsum, et euismod dolor condimentum sed. Maecenas tellus nulla, sagittis pharetra vulputate ut, porta quis ex.</p>
+
+  <a href="#introtext" class="active">BACK TO TOP</a>
 
 
 </section>
